<resources>
    <string name="app_name">StockQuotes-Walling</string>
    <string name="enter_symbol">Enter stock symbol:</string>
    <string name="symbol">Symbol:</string>
    <string name="name">Name:</string>
    <string name="trade_price">Last Trade Price:</string>
    <string name="trade_time">Last Trade Time:</string>
    <string name="change">Change:</string>
    <string name="week_range">52 Week Range:</string>
</resources>
