<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity"
    android:background="@color/colorPrimaryDark"
    android:layout_gravity="center_vertical"
    tools:context=".MainActivity">

    <!-- ENTER STOCK SYMBOL -->
    <LinearLayout
        android:id="@+id/enterStockLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_pad"
        android:layout_marginTop="@dimen/margin_top"
        >

        <TextView
            android:id="@+id/enterStockText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/default_pad"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_med"
            android:text="@string/enter_symbol" />

        <EditText
            android:id="@+id/input"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_pad"
            android:textColor="@color/colorAccent"
            android:inputType="textCapCharacters"
            android:maxLength="12" />
    </LinearLayout>

    <!-- SYMBOL -->
    <LinearLayout
        android:id="@+id/symbolLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterStockLayout"
        android:paddingLeft="@dimen/default_pad"
        android:paddingRight="@dimen/default_pad"
        android:orientation="horizontal"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/symbolText"
            android:layout_width="@dimen/column1_width"
            android:layout_height="match_parent"
            android:padding="@dimen/default_pad"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:text="@string/symbol"/>

        <TextView
            android:id="@+id/symbolResult"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_pad"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:textAlignment="textStart" />
    </LinearLayout>

    <!-- NAME -->
    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/symbolLayout"
        android:paddingLeft="@dimen/default_pad"
        android:paddingRight="@dimen/default_pad"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameText"
            android:layout_width="@dimen/column1_width"
            android:layout_height="match_parent"
            android:padding="@dimen/default_pad"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:text="@string/name" />

        <TextView
            android:id="@+id/nameResult"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_pad"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:textAlignment="textStart" />
    </LinearLayout>

    <!-- LAST TRADE PRICE -->
    <LinearLayout
        android:id="@+id/tradePriceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameLayout"
        android:paddingLeft="@dimen/default_pad"
        android:paddingRight="@dimen/default_pad"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tradePriceText"
            android:layout_width="@dimen/column1_width"
            android:layout_height="match_parent"
            android:padding="@dimen/default_pad"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:text="@string/trade_price" />

        <TextView
            android:id="@+id/tradePriceResult"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_pad"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:textAlignment="textStart" />
    </LinearLayout>

    <!-- TRADE TIME -->
    <LinearLayout
        android:id="@+id/tradeTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tradePriceLayout"
        android:paddingLeft="@dimen/default_pad"
        android:paddingRight="@dimen/default_pad"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tradeTimeText"
            android:layout_width="@dimen/column1_width"
            android:layout_height="match_parent"
            android:padding="@dimen/default_pad"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:text="@string/trade_time" />

        <TextView
            android:id="@+id/tradeTimeResult"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_pad"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:textAlignment="textStart" />
    </LinearLayout>

    <!-- CHANGE -->
    <LinearLayout
        android:id="@+id/changeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tradeTimeLayout"
        android:paddingLeft="@dimen/default_pad"
        android:paddingRight="@dimen/default_pad"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/changeText"
            android:layout_width="@dimen/column1_width"
            android:layout_height="match_parent"
            android:padding="@dimen/default_pad"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:text="@string/change" />

        <TextView
            android:id="@+id/changeResult"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_pad"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:textAlignment="textStart" />
    </LinearLayout>

    <!-- 52 WEEK RANGE -->
    <LinearLayout
        android:id="@+id/weekRangeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changeLayout"
        android:paddingLeft="@dimen/default_pad"
        android:paddingRight="@dimen/default_pad"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weekRangeText"
            android:layout_width="@dimen/column1_width"
            android:layout_height="match_parent"
            android:padding="@dimen/default_pad"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:text="@string/week_range" />

        <TextView
            android:id="@+id/weekRangeResult"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_pad"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:textAlignment="textStart" />
    </LinearLayout>

</RelativeLayout>